# NPT

./: Cargo.toml  README.md  client_report.json
.claude/: settings.local.json
.github/workflows/: release.yml
client/: Cargo.toml
client/src/: main.rs  quic_client.rs  server_pool.rs  simulator.rs  tcp_client.rs  tui.rs  udp_client.rs
server/: Cargo.toml
server/src/: main.rs  quic_server.rs  tcp_server.rs  tui.rs  udp_server.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  log_buffer.rs  metrics.rs  protocol.rs  report.rs
