[workspace]
members = ["client", "server", "shared"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
ratatui = "0.24"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
anyhow = "1.0"
rand = "0.8"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6.1.0"
quinn = "0.11"
rustls = { version = "0.23" }
bytes = "1.5"
http = "1.0"
rcgen = "0.13"